--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ keywords: 胡建
 favicon: /favicon.ico
 timezone: Asia/BeiJing
 encoding: "utf-8"
-source_code: https://github.com/izhangzhihao/izhangzhihao.github.io
+source_code: https://github.com/postsal/postsal.github.io
 side_bar_repo_limit: 5
 
 # ---------------- #
