--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://izhangzhihao.github.io/
+url: https://postsal.github.io/
 date_format: "ordinal"
 title: MyNotes
 subtitle: "Make the impossible possible, the possible easy and the easy elegant"
