--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: MyNotes
 subtitle: "Make the impossible possible, the possible easy and the easy elegant"
 description: "胡建的个人博客"
 keywords: 胡建
-favicon: /favicon.ico
+favicon: /image.ico
 timezone: Asia/BeiJing
 encoding: "utf-8"
 source_code: https://github.com/postsal/postsal.github.io
