--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 baseurl:
 url: https://postsal.github.io/
 date_format: "ordinal"
-title: MyNotes
+title: 叨叨狗
 subtitle: "Make the impossible possible, the possible easy and the easy elegant"
 description: "胡建的个人博客"
 keywords: 胡建
-favicon: /favicon.PNG
+favicon: /favicon.ico
 timezone: Asia/BeiJing
 encoding: "utf-8"
 source_code: https://github.com/postsal/postsal.github.io
@@ -18,8 +18,8 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: 胡建
-organization: 智慧软件工作室
-organization_url: 暂无
+organization: 华北理工大学
+organization_url: www.ncst.edu.cn
 location: 唐山•中国
 email: ihujian9438@163.com
 
