--- a/_config.yml
+++ b/_config.yml
@@ -95,5 +95,5 @@ disqus_username: postsal-github-io
 # ---------------- #
 #      Datas       #
 # ---------------- #
-skill_language_keywords: [Java, Scala, C Sharp, Python]
-skill_web_app_keywords: [javaEE, Spring ,Spring MVC ,JPA , Hibernate , MyBatis, Shiro ,Redis ,Spring Data ,MySql ,ASP.NET ,ASP.NET MVC,Entity Framework]
+skill_language_keywords: [Java, Scala,]
+skill_web_app_keywords: [javaEE, Spring ,Spring MVC ,JPA , Hibernate , MyBatis, Shiro ,Redis ,Spring Data ,MySql,Entity Framework]
