--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://postsal.github.io/
 date_format: "ordinal"
 title: MyBlog
-subtitle: "Make the impossible possible, the possible easy and the easy elegant"
+subtitle: "Coding for happiness"
 description: "胡建的个人博客"
 keywords: 胡建
 favicon: /favicon.ico
