--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ navs:
     href: /categories/
     label: 分类
 
-  -
-    href: /MySkillTree/
-    label: 我的技能树
+#  -
+#    href: /MySkillTree/
+#    label: 我的技能树
 
   -
     href: /about/
